k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ontario-lead-analysis
  namespace: hivelab-sites
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/expose: "true"
    external-dns.alpha.kubernetes.io/target: "206.12.103.4"
spec:
  ingressClassName: nginx
  rules:
    - host: water.hivelab-uoft.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ontario-lead-analysis
                port:
                  number: 80

  tls:
    - hosts:
        - water.hivelab-uoft.ca
      secretName: water-tls
